--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/is-hotkey": "^0.1.7",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.18.10",
@@ -17,6 +18,10 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
+    "@types/slate": "^0.47.11",
+    "@types/slate-react": "^0.50.1",
+    "emotion": "^11.0.0",
+    "is-hotkey": "^0.2.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +31,9 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
+    "slate": "^0.87.0",
+    "slate-history": "^0.86.0",
+    "slate-react": "^0.88.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
