--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "slate": "^0.86.0",
     "slate-history": "^0.86.0",
     "slate-react": "^0.88.0",
-    "typescript": "^3.9.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -63,6 +62,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.13.1"
+    "@types/react-modal": "^3.13.1",
+    "typescript": "^4.9.4"
   }
 }
